# global_invest_dev

./: .gitignore  .gitignore copy  pyproject.toml  setup.py
docs/: introduction.md
global_invest/: carbon_storage_ipcc_tier_1_cython.cp310-win_amd64.pyd  carbon_storage_ipcc_tier_1_cython.pyx  compile_cython_functions.py  ecosystem_services_functions.py  ecosystem_services_tasks.py  example_research_script_relative_paths.py  example_run_file.py  old_wwf_global_invest_main.py  run_global_carbon.py  tmp.prof
global_invest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
global_invest/carbon_storage/: carbon_storage_ipcc_tier_1_cython.c  carbon_storage_ipcc_tier_1_cython.cp311-win_amd64.pyd  carbon_storage_ipcc_tier_1_cython.pyx
global_invest/cnc_global_cv/: NCI_LULC_INPUTS.txt  global_cv_analysis.py  value_reefs.py
global_invest/input_repositories/cnc_global_cv/: DASGUPTA_CV_LULC_INPUTS.txt  clean_geomorphology.py  create_coastal_terrestrial_hab.py  create_global_shore_grids.py  global_cv_analysis.py  taskgraph_downloader_pnn.py
global_invest/input_repositories/global_gep_pollination_lingling/: Calculate_Pollination-Dependent_Production_65_crops_step_1.py  calculate_GEP_65_crops.py  calculate_GEP_pollination_65_crops_final.py  crop_production_zonal_statistics_by_country_65_crops_step_1_2.py  make_poll_suff.py  make_poll_suff_seals.py  match_country_name_from_two_datasets.py  (+3 more)
global_invest/pollination/: compress_and_overview.py  make_poll_suff.py  pollination_funcs.py  pollination_tasks.py  raster_calculations_core.py
workspace_config/: launch.json  settings.json
